unpackaged/main/default/objects/rider_history__b/rider_history__b.object-meta.xml
<CustomObject>
    <label>Rider History</label>
    <pluralLabel>Rider History</pluralLabel>
</CustomObject>