unpackaged/main/default/objects/rider_history__b/fields/Rider_Account__c.field-meta.xml
<CustomField>
    <fullName>Rider_Account__c</fullName>
    <label>Rider Account</label>
    <length>16</length>
    <required>true</required>
    <type>Text</type>
</CustomField>