unpackaged/main/default/objects/rider_history__b/fields/Rider_Rating__c.field-meta.xml
<CustomField>
    <fullName>Rider_Rating__c</fullName>
    <label>Rider Rating</label>
    <precision>2</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>