unpackaged/main/default/objects/rider_history__b/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <label>Service Type</label>
    <length>16</length>
    <type>Text</type>
</CustomField>