unpackaged/main/default/objects/rider_history__b/fields/Start_Location_Lat__c.field-meta.xml
<CustomField>
    <fullName>Start_Location_Lat__c</fullName>
    <label>Start Location Latitude</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>